--- a/app/src/main/res/layout/fox_card_view.xml
+++ b/app/src/main/res/layout/fox_card_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/character_image"
+            android:id="@+id/fox_image"
             android:layout_width="128dp"
             android:layout_height="128dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,21 +23,21 @@
             android:layout_margin="16dp"/>
 
         <TextView
-            android:id="@+id/character_title"
+            android:id="@+id/fox_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/character_image"
+            app:layout_constraintStart_toEndOf="@id/fox_image"
             app:layout_constraintTop_toTopOf="parent"
             android:maxLines="2"
-            tools:text="@string/character_name"
+            tools:text="@string/fox_name"
             android:layout_margin="16dp"/>
         <TextView
-            android:id="@+id/character_description"
+            android:id="@+id/fox_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/character_image"
-            app:layout_constraintTop_toBottomOf="@id/character_title"
-            android:text="@string/character_age"
+            app:layout_constraintStart_toEndOf="@id/fox_image"
+            app:layout_constraintTop_toBottomOf="@id/fox_name"
+            android:text="@string/fox_age"
             android:layout_margin="16dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
